--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -1,113 +1,110 @@
-name: 📥 Download 8yr Historical Data (Split)
+name: 📥 Download History Data (ab 2020)
 
 on:
   workflow_dispatch:
 
 jobs:
-  download-old:
-    name: 📦 ${{ matrix.symbol }}｜${{ matrix.interval }}｜2017→2021
+  download-2020-2022:
+    name: 🔹 2020→2022 History
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        symbol:   [BTCUSDT, ETHUSDT, BNBUSDT, XRPUSDT, SOLUSDT, ENAUSDT]
-        interval: [1m, 5m, 15m, 1h, 4h]
 
     steps:
-      - name: 🔄 Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: ⚙️ Mach Download-Script ausführbar
+      - name: ⚙️ Skript ausführbar machen
         run: chmod +x train/download_data_range.sh
 
-      - name: 📅 Setze Zeitspanne 2017→2021
-        shell: bash
+      - name: 📅 Datum setzen 2020–2022
         run: |
-          echo "START=2017-01-01" >> $GITHUB_ENV
-          echo "END=2021-01-01"   >> $GITHUB_ENV
+          echo "START=2020-01-01" >> $GITHUB_ENV
+          echo "END=2022-01-01"   >> $GITHUB_ENV
+          echo "PART=part1"       >> $GITHUB_ENV
 
-      - name: 🌐 Download ${{ matrix.symbol }} / ${{ matrix.interval }}
+      - name: 🌐 Download Vision-Daily-Zips 2020–2022
         run: |
-          OUT=historical/${{ matrix.symbol }}/${{ matrix.interval }}/2017-2021
-          mkdir -p "$OUT"
-          train/download_data_range.sh \
-            "${{ matrix.symbol }}" \
-            "${{ matrix.interval }}" \
-            "$START" "$END" \
-            "$OUT"
+          SYMBOLS=(BTCUSDT ETHUSDT BNBUSDT XRPUSDT SOLUSDT ENAUSDT)
+          INTERVALS=(1m 5m 15m 1h 4h)
+          for sym in "${SYMBOLS[@]}"; do
+            for iv in "${INTERVALS[@]}"; do
+              OUT=historical/${sym}/${iv}/${PART}
+              mkdir -p "$OUT"
+              ./train/download_data_range.sh "$sym" "$iv" "$START" "$END" "$OUT"
+            done
+          done
 
-      - name: 📦 Zip & Skip empty
-        shell: bash
+      - name: 📦 Zip & keine leeren Ordner
         run: |
           mkdir -p artifacts
-          ZIP="artifacts/hist-${{ matrix.symbol }}-${{ matrix.interval }}-2017-2021.zip"
-          DIR="historical/${{ matrix.symbol }}/${{ matrix.interval }}/2017-2021"
           shopt -s nullglob
-          files=( "$DIR"/*.zip )
-          if [ ${#files[@]} -gt 0 ]; then
-            zip -j "$ZIP" "${files[@]}"
-            echo "→ Created $ZIP with ${#files[@]} files"
-          else
-            echo "→ No files for $DIR — skipping zip"
-          fi
+          for sym in BTCUSDT ETHUSDT BNBUSDT XRPUSDT SOLUSDT ENAUSDT; do
+            for iv in 1m 5m 15m 1h 4h; do
+              DIR=historical/${sym}/${iv}/${PART}
+              ZIP=artifacts/hist-${sym}-${iv}-${PART}.zip
+              files=( "$DIR"/*.zip )
+              if (( ${#files[@]} )); then
+                zip -j "$ZIP" "${files[@]}"
+                echo "→ $ZIP (${#files[@]} files)"
+              else
+                echo "⏩ Kein Data für $sym $iv $PART"
+              fi
+            done
+          done
 
-      - name: 🚀 Upload Artifact 2017→2021
+      - name: 🚀 Upload Artifacts Part1
         uses: actions/upload-artifact@v4
         with:
-          name: historical-${{ matrix.symbol }}-${{ matrix.interval }}-2017-2021
-          path: artifacts/hist-${{ matrix.symbol }}-${{ matrix.interval }}-2017-2021.zip
+          name: history-2020-2022
+          path: artifacts/*.zip
 
-  download-new:
-    name: 📦 ${{ matrix.symbol }}｜${{ matrix.interval }}｜2021→heute
-    needs: download-old
+  download-2022-now:
+    name: 🔹 2022→gestern History
+    needs: download-2020-2022
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        symbol:   [BTCUSDT, ETHUSDT, BNBUSDT, XRPUSDT, SOLUSDT, ENAUSDT]
-        interval: [1m, 5m, 15m, 1h, 4h]
 
     steps:
-      - name: 🔄 Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: ⚙️ Mach Download-Script ausführbar
+      - name: ⚙️ Skript ausführbar machen
         run: chmod +x train/download_data_range.sh
 
-      - name: 📅 Setze Zeitspanne 2021→heute
-        shell: bash
+      - name: 📅 Datum setzen 2022–gestern
         run: |
-          echo "START=2021-01-01" >> $GITHUB_ENV
-          echo "END=$(date -I -d "yesterday")" >> $GITHUB_ENV
+          echo "START=2022-01-01" >> $GITHUB_ENV
+          echo "END=$(date -I -d 'yesterday')" >> $GITHUB_ENV
+          echo "PART=part2"                   >> $GITHUB_ENV
 
-      - name: 🌐 Download ${{ matrix.symbol }} / ${{ matrix.interval }}
+      - name: 🌐 Download Vision-Daily-Zips 2022–gestern
         run: |
-          OUT=historical/${{ matrix.symbol }}/${{ matrix.interval }}/2021-heute
-          mkdir -p "$OUT"
-          train/download_data_range.sh \
-            "${{ matrix.symbol }}" \
-            "${{ matrix.interval }}" \
-            "$START" "$END" \
-            "$OUT"
+          SYMBOLS=(BTCUSDT ETHUSDT BNBUSDT XRPUSDT SOLUSDT ENAUSDT)
+          INTERVALS=(1m 5m 15m 1h 4h)
+          for sym in "${SYMBOLS[@]}"; do
+            for iv in "${INTERVALS[@]}"; do
+              OUT=historical/${sym}/${iv}/${PART}
+              mkdir -p "$OUT"
+              ./train/download_data_range.sh "$sym" "$iv" "$START" "$END" "$OUT"
+            done
+          done
 
-      - name: 📦 Zip & Skip empty
-        shell: bash
+      - name: 📦 Zip & keine leeren Ordner
         run: |
           mkdir -p artifacts
-          ZIP="artifacts/hist-${{ matrix.symbol }}-${{ matrix.interval }}-2021-heute.zip"
-          DIR="historical/${{ matrix.symbol }}/${{ matrix.interval }}/2021-heute"
           shopt -s nullglob
-          files=( "$DIR"/*.zip )
-          if [ ${#files[@]} -gt 0 ]; then
-            zip -j "$ZIP" "${files[@]}"
-            echo "→ Created $ZIP with ${#files[@]} files"
-          else
-            echo "→ No files for $DIR — skipping zip"
-          fi
+          for sym in BTCUSDT ETHUSDT BNBUSDT XRPUSDT SOLUSDT ENAUSDT; do
+            for iv in 1m 5m 15m 1h 4h; do
+              DIR=historical/${sym}/${iv}/${PART}
+              ZIP=artifacts/hist-${sym}-${iv}-${PART}.zip
+              files=( "$DIR"/*.zip )
+              if (( ${#files[@]} )); then
+                zip -j "$ZIP" "${files[@]}"
+                echo "→ $ZIP (${#files[@]} files)"
+              else
+                echo "⏩ Kein Data für $sym $iv $PART"
+              fi
+            done
+          done
 
-      - name: 🚀 Upload Artifact 2021→heute
+      - name: 🚀 Upload Artifacts Part2
         uses: actions/upload-artifact@v4
         with:
-          name: historical-${{ matrix.symbol }}-${{ matrix.interval }}-2021-heute
-          path: artifacts/hist-${{ matrix.symbol }}-${{ matrix.interval }}-2021-heute.zip
-
+          name: history-2022-gestern
+          path: artifacts/*.zip
