--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -1,71 +1,56 @@
-name: 📊 Download Metrics (Parallel)
+name: 📊 Download 4yr Metrics (6 Jobs)
 
 on:
   workflow_dispatch:
 
 jobs:
-  download_metrics:
-    name: 📊 ${{ matrix.symbol }}｜${{ matrix.metric }}｜${{ matrix.part }}
+  download:
+    name: 🔄 ${{ matrix.metric }} ➡️ ${{ matrix.part }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        symbol: [BTCUSDT, ETHUSDT, BNBUSDT, XRPUSDT, SOLUSDT, ENAUSDT]
         metric: [open_interest, funding_rate, liquidity]
-        part: [part1, part2]
+        part:   [part1, part2]
 
     steps:
-      - name: 🔄 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: 🔑 WORKER_URL setzen
-        # Deploye vorher Deinen Cloudflare-Worker und
-        # speichere die URL als GitHub-Secret METRICS_WORKER_URL
+      - name: Set WORKER_URL
         run: echo "WORKER_URL=${{ secrets.METRICS_WORKER_URL }}" >> $GITHUB_ENV
 
-      - name: ⚙️  Skript ausführbar machen
+      - name: Make script executable
         run: chmod +x metrics/download_metrics_range.sh
 
-      - name: 📅 Datumsspanne berechnen (${{ matrix.part }})
-        id: dates
+      - name: Compute date range for ${{ matrix.part }}
+        shell: bash
         run: |
-          if [[ "${{ matrix.part }}" == "part1" ]]; then
-            START=2020-01-01
-            END=2022-01-01
+          if [ "${{ matrix.part }}" = "part1" ]; then
+            START="2020-01-01"
+            END="2022-01-01"
           else
-            START=2022-01-01
-            END=$(date -I -d "yesterday")
+            START="2022-01-01"
+            END="$(date -I -d "yesterday")"
           fi
-          echo "start=$START" >> $GITHUB_OUTPUT
-          echo "end=$END"   >> $GITHUB_OUTPUT
+          echo "START=$START" >> $GITHUB_ENV
+          echo "END=$END"     >> $GITHUB_ENV
 
-      - name: 🌐 Download ${{ matrix.symbol }} / ${{ matrix.metric }} / ${{ matrix.part }}
+      - name: Download metrics: ${{ matrix.metric }}
         run: |
-          OUT=metrics/${{ matrix.symbol }}/${{ matrix.metric }}/${{ matrix.part }}
-          mkdir -p "$OUT"
-          ./metrics/download_metrics_range.sh \
-            "${{ matrix.symbol }}" \
-            "${{ matrix.metric }}" \
-            "${{ steps.dates.outputs.start }}" \
-            "${{ steps.dates.outputs.end }}" \
-            "$OUT"
+          # Script lädt zwar alle 3 Metriken, wir zippen aber nur die eine, die wir hier brauchen
+          ./metrics/download_metrics_range.sh "$START" "$END" ${{ matrix.part }}
 
-      - name: 📦 ZIP & Upload
+      - name: Zip only "${{ matrix.metric }}"
         run: |
           mkdir -p artifacts
-          DIR=metrics/${{ matrix.symbol }}/${{ matrix.metric }}/${{ matrix.part }}
-          files=( "$DIR"/*.json )
-          if (( ${#files[@]} )); then
-            ZIP=artifacts/metrics-${{ matrix.symbol }}-${{ matrix.metric }}-${{ matrix.part }}.zip
-            zip -j "$ZIP" "${files[@]}"
-            echo "→ $ZIP erstellt mit ${#files[@]} Dateien"
-          else
-            echo "❌ Keine JSONs in $DIR – Job fehlschlagen"
-            exit 1
-          fi
+          ZIP=artifacts/metrics-${{ matrix.metric }}-${{ matrix.part }}.zip
+          DIR=metrics/${{ matrix.part }}/${{ matrix.metric }}
+          echo "→ Zipping $DIR → $ZIP"
+          zip -j "$ZIP" "$DIR"/*.json
 
-      - name: 🚀 Upload Artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: metrics-${{ matrix.symbol }}-${{ matrix.metric }}-${{ matrix.part }}
-          path: artifacts/metrics-${{ matrix.symbol }}-${{ matrix.metric }}-${{ matrix.part }}.zip
+          name: metrics-${{ matrix.metric }}-${{ matrix.part }}
+          path: artifacts/metrics-${{ matrix.metric }}-${{ matrix.part }}.zip
